<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ahorcado">
    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="35dp"
        android:layout_height="34dp"
        android:onClick="sonido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />

    <ImageView
        android:id="@+id/ahorcado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/boton1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22"
        app:srcCompat="@drawable/elahorcado1" />

    <TextView
        android:id="@+id/texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/mensajeT"
        android:layout_width="343dp"
        android:layout_height="239dp"
        android:background="@drawable/perdedor"
        android:stretchColumns="0,1"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19">

        <TableRow

            android:layout_width="154dp"
            android:layout_height="179dp">

            <TextView
                android:id="@+id/mensaje"
                android:layout_width="333dp"
                android:layout_height="185dp"
                android:layout_span="3"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/rojo"
                android:textSize="34sp"
                android:textStyle="bold" />


        </TableRow>


        <TableRow>

            <Button
                android:id="@+id/seguir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="seguir"
                android:text="@string/reintentar"
                android:textColor="@color/rojo"
                app:backgroundTint="@color/black" />

            <TextView android:layout_width="1dp"></TextView>

            <Button
                android:id="@+id/salir"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:onClick="salir"
                android:text="@string/salir"
                android:textColor="@android:color/holo_blue_dark"
                app:backgroundTint="@color/verdeflojo" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/A"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:onClick="enviar"
        android:text="@string/A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />
    <Button
        android:id="@+id/B"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:onClick="enviar"
        android:text="B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />
    <Button
        android:id="@+id/C"
        android:layout_width="42dp"
        android:onClick="enviar"

        android:layout_height="39dp"
        android:text="C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />
    <Button
        android:id="@+id/D"
        android:layout_width="42dp"
        android:onClick="enviar"

        android:layout_height="39dp"
        android:text="D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />
    <Button
        android:id="@+id/E"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:onClick="enviar"
        android:text="E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />
    <Button
        android:id="@+id/F"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:onClick="enviar"

        android:text="F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />
    <Button
        android:id="@+id/G"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:onClick="enviar"

        android:text="G"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />
    <Button
        android:id="@+id/H"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:onClick="enviar"

        android:text="H"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />
    <Button
        android:id="@+id/I"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:onClick="enviar"

        android:text="I"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />
    <Button
        android:id="@+id/J"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:onClick="enviar"

        android:text="J"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />
    <Button
        android:id="@+id/K"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:onClick="enviar"

        android:text="K"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />
    <Button
        android:id="@+id/L"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:onClick="enviar"

        android:text="L"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.70"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />
    <Button
        android:id="@+id/M"
        android:layout_width="42dp"
        android:onClick="enviar"

        android:layout_height="39dp"
        android:text="M"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />
    <Button
        android:id="@+id/N"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:onClick="enviar"
        android:text="N"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />
    <Button
        android:id="@+id/O"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:onClick="enviar"
        android:text="O"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />
    <Button
        android:id="@+id/Ñ"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:onClick="enviar"
        android:text="Ñ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />
    <Button
        android:id="@+id/P"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:onClick="enviar"
        android:text="P"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/Q"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:onClick="enviar"
        android:text="Q"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/R"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:onClick="enviar"
        android:text="R"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />
    <Button
        android:id="@+id/S"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:onClick="enviar"
        android:text="S"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />
    <Button
        android:id="@+id/T"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:onClick="enviar"
        android:text="T"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />
    <Button
        android:id="@+id/U"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:onClick="enviar"
        android:text="U"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/V"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:onClick="enviar"
        android:text="V"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/X"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:onClick="enviar"
        android:text="X"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.70"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/W"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:onClick="enviar"
        android:text="W"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/Y"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:onClick="enviar"
        android:text="Y"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/Z"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:onClick="enviar"
        android:text="Z"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <TextView
        android:id="@+id/reloj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />


</androidx.constraintlayout.widget.ConstraintLayout>